@@ -52,3 +52,8 @@ Changes Since Alpha Release:
 - Added support for RK06 and RK07 Unix V7 drives
 - Added support for creating arbitrary sized Unix V7 file systems
 
+26-Sep-24
+
+- Fixed display of System ID during RT-11 mount if there is non-zero data
+  following the System ID on the disk
+
